@@ -631,21 +631,11 @@ name|ArrayWritable
 operator|.
 name|class
 argument_list|,
-name|Byte
-operator|.
-name|valueOf
-argument_list|(
-name|Integer
-operator|.
-name|valueOf
-argument_list|(
+operator|(
+name|byte
+operator|)
 operator|-
 literal|127
-argument_list|)
-operator|.
-name|byteValue
-argument_list|()
-argument_list|)
 argument_list|)
 expr_stmt|;
 name|addToMap
@@ -654,21 +644,11 @@ name|BooleanWritable
 operator|.
 name|class
 argument_list|,
-name|Byte
-operator|.
-name|valueOf
-argument_list|(
-name|Integer
-operator|.
-name|valueOf
-argument_list|(
+operator|(
+name|byte
+operator|)
 operator|-
 literal|126
-argument_list|)
-operator|.
-name|byteValue
-argument_list|()
-argument_list|)
 argument_list|)
 expr_stmt|;
 name|addToMap
@@ -677,21 +657,11 @@ name|BytesWritable
 operator|.
 name|class
 argument_list|,
-name|Byte
-operator|.
-name|valueOf
-argument_list|(
-name|Integer
-operator|.
-name|valueOf
-argument_list|(
+operator|(
+name|byte
+operator|)
 operator|-
 literal|125
-argument_list|)
-operator|.
-name|byteValue
-argument_list|()
-argument_list|)
 argument_list|)
 expr_stmt|;
 name|addToMap
@@ -700,21 +670,11 @@ name|FloatWritable
 operator|.
 name|class
 argument_list|,
-name|Byte
-operator|.
-name|valueOf
-argument_list|(
-name|Integer
-operator|.
-name|valueOf
-argument_list|(
+operator|(
+name|byte
+operator|)
 operator|-
 literal|124
-argument_list|)
-operator|.
-name|byteValue
-argument_list|()
-argument_list|)
 argument_list|)
 expr_stmt|;
 name|addToMap
@@ -723,21 +683,11 @@ name|IntWritable
 operator|.
 name|class
 argument_list|,
-name|Byte
-operator|.
-name|valueOf
-argument_list|(
-name|Integer
-operator|.
-name|valueOf
-argument_list|(
+operator|(
+name|byte
+operator|)
 operator|-
 literal|123
-argument_list|)
-operator|.
-name|byteValue
-argument_list|()
-argument_list|)
 argument_list|)
 expr_stmt|;
 name|addToMap
@@ -746,21 +696,11 @@ name|LongWritable
 operator|.
 name|class
 argument_list|,
-name|Byte
-operator|.
-name|valueOf
-argument_list|(
-name|Integer
-operator|.
-name|valueOf
-argument_list|(
+operator|(
+name|byte
+operator|)
 operator|-
 literal|122
-argument_list|)
-operator|.
-name|byteValue
-argument_list|()
-argument_list|)
 argument_list|)
 expr_stmt|;
 name|addToMap
@@ -769,21 +709,11 @@ name|MapWritable
 operator|.
 name|class
 argument_list|,
-name|Byte
-operator|.
-name|valueOf
-argument_list|(
-name|Integer
-operator|.
-name|valueOf
-argument_list|(
+operator|(
+name|byte
+operator|)
 operator|-
 literal|121
-argument_list|)
-operator|.
-name|byteValue
-argument_list|()
-argument_list|)
 argument_list|)
 expr_stmt|;
 name|addToMap
@@ -792,21 +722,11 @@ name|MD5Hash
 operator|.
 name|class
 argument_list|,
-name|Byte
-operator|.
-name|valueOf
-argument_list|(
-name|Integer
-operator|.
-name|valueOf
-argument_list|(
+operator|(
+name|byte
+operator|)
 operator|-
 literal|120
-argument_list|)
-operator|.
-name|byteValue
-argument_list|()
-argument_list|)
 argument_list|)
 expr_stmt|;
 name|addToMap
@@ -815,21 +735,11 @@ name|NullWritable
 operator|.
 name|class
 argument_list|,
-name|Byte
-operator|.
-name|valueOf
-argument_list|(
-name|Integer
-operator|.
-name|valueOf
-argument_list|(
+operator|(
+name|byte
+operator|)
 operator|-
 literal|119
-argument_list|)
-operator|.
-name|byteValue
-argument_list|()
-argument_list|)
 argument_list|)
 expr_stmt|;
 name|addToMap
@@ -838,21 +748,11 @@ name|ObjectWritable
 operator|.
 name|class
 argument_list|,
-name|Byte
-operator|.
-name|valueOf
-argument_list|(
-name|Integer
-operator|.
-name|valueOf
-argument_list|(
+operator|(
+name|byte
+operator|)
 operator|-
 literal|118
-argument_list|)
-operator|.
-name|byteValue
-argument_list|()
-argument_list|)
 argument_list|)
 expr_stmt|;
 name|addToMap
@@ -861,21 +761,11 @@ name|SortedMapWritable
 operator|.
 name|class
 argument_list|,
-name|Byte
-operator|.
-name|valueOf
-argument_list|(
-name|Integer
-operator|.
-name|valueOf
-argument_list|(
+operator|(
+name|byte
+operator|)
 operator|-
 literal|117
-argument_list|)
-operator|.
-name|byteValue
-argument_list|()
-argument_list|)
 argument_list|)
 expr_stmt|;
 name|addToMap
@@ -884,21 +774,11 @@ name|Text
 operator|.
 name|class
 argument_list|,
-name|Byte
-operator|.
-name|valueOf
-argument_list|(
-name|Integer
-operator|.
-name|valueOf
-argument_list|(
+operator|(
+name|byte
+operator|)
 operator|-
 literal|116
-argument_list|)
-operator|.
-name|byteValue
-argument_list|()
-argument_list|)
 argument_list|)
 expr_stmt|;
 name|addToMap
@@ -907,21 +787,11 @@ name|TwoDArrayWritable
 operator|.
 name|class
 argument_list|,
-name|Byte
-operator|.
-name|valueOf
-argument_list|(
-name|Integer
-operator|.
-name|valueOf
-argument_list|(
+operator|(
+name|byte
+operator|)
 operator|-
 literal|115
-argument_list|)
-operator|.
-name|byteValue
-argument_list|()
-argument_list|)
 argument_list|)
 expr_stmt|;
 comment|// UTF8 is deprecated so we don't support it
@@ -931,21 +801,11 @@ name|VIntWritable
 operator|.
 name|class
 argument_list|,
-name|Byte
-operator|.
-name|valueOf
-argument_list|(
-name|Integer
-operator|.
-name|valueOf
-argument_list|(
+operator|(
+name|byte
+operator|)
 operator|-
 literal|114
-argument_list|)
-operator|.
-name|byteValue
-argument_list|()
-argument_list|)
 argument_list|)
 expr_stmt|;
 name|addToMap
@@ -954,21 +814,11 @@ name|VLongWritable
 operator|.
 name|class
 argument_list|,
-name|Byte
-operator|.
-name|valueOf
-argument_list|(
-name|Integer
-operator|.
-name|valueOf
-argument_list|(
+operator|(
+name|byte
+operator|)
 operator|-
 literal|113
-argument_list|)
-operator|.
-name|byteValue
-argument_list|()
-argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
