@@ -773,7 +773,7 @@ name|String
 name|idStr
 parameter_list|)
 block|{
-name|Long
+name|long
 name|longVal
 init|=
 name|Long
@@ -783,20 +783,15 @@ argument_list|(
 name|idStr
 argument_list|)
 decl_stmt|;
-name|int
-name|intVal
-init|=
-name|longVal
-operator|.
-name|intValue
-argument_list|()
-decl_stmt|;
 return|return
 name|Integer
 operator|.
 name|valueOf
 argument_list|(
-name|intVal
+operator|(
+name|int
+operator|)
+name|longVal
 argument_list|)
 return|;
 block|}
@@ -2634,7 +2629,7 @@ argument_list|(
 literal|1
 argument_list|)
 decl_stmt|;
-name|int
+name|Integer
 name|remoteId
 init|=
 name|parseId
@@ -2647,7 +2642,7 @@ literal|2
 argument_list|)
 argument_list|)
 decl_stmt|;
-name|int
+name|Integer
 name|localId
 init|=
 name|parseId
