@@ -2126,7 +2126,7 @@ name|assumeTrue
 argument_list|(
 name|Boolean
 operator|.
-name|valueOf
+name|parseBoolean
 argument_list|(
 name|System
 operator|.
