@@ -1170,12 +1170,10 @@ name|visibilities
 operator|==
 literal|null
 operator|)
-condition|?
-literal|true
-else|:
+operator|||
 name|Boolean
 operator|.
-name|valueOf
+name|parseBoolean
 argument_list|(
 name|visibilities
 index|[
@@ -1911,12 +1909,10 @@ name|visibilities
 operator|==
 literal|null
 operator|)
-condition|?
-literal|true
-else|:
+operator|||
 name|Boolean
 operator|.
-name|valueOf
+name|parseBoolean
 argument_list|(
 name|visibilities
 index|[
